--- a/liferay/modules/oth/oth-login-portlet/src/main/resources/META-INF/resources/navigation.jspf
+++ b/liferay/modules/oth/oth-login-portlet/src/main/resources/META-INF/resources/navigation.jspf
@@ -1,5 +1,4 @@
-<%@ page import="com.liferay.login.web.internal.servlet.taglib.include.NavigationPageIncludeUtil" %><%--
-/**
+<%--/**
  * Copyright (c) 2000-present Liferay, Inc. All rights reserved.
  *
  * This library is free software; you can redistribute it and/or modify it under
@@ -13,7 +12,8 @@
  * details.
  */
 --%>
-
+<%@ page import="com.liferay.login.web.internal.servlet.taglib.include.NavigationPageIncludeUtil" %>
+<liferay-theme:defineObjects />
 <liferay-util:buffer
         var="navigation"
 >
